--- a/src/sass/layout/_l-value.scss
+++ b/src/sass/layout/_l-value.scss
@@ -1,10 +1,16 @@
 @use '../foundation/' as *;
 
 .l-value {
+  position: relative;
+  z-index: -1;
   background-color: $color-blue;
-  margin-bottom: rem(100);
+  margin-bottom: rem(150);
+  padding-top: rem(50);
+  padding-bottom: rem(30);
   @include mq(md){
-    padding:  rem(70);
+    // padding:  rem(70);
+    padding-top: rem(70);
+    padding-bottom: rem(70);
     margin-bottom: rem(120);
   }
 }
