--- a/src/sass/foundation/_base.scss
+++ b/src/sass/foundation/_base.scss
@@ -1,6 +1,6 @@
-@use 'variables' as *;
-@use 'mixin' as *;
-@use 'functions' as *;
+@use "variables" as *;
+@use "mixin" as *;
+@use "functions" as *;
 
 html {
   @if $break-flg == 0 {
@@ -21,7 +21,7 @@ html {
     @media (min-width: $inner) {
       font-size: $base-font-size;
     }
-  }@else{
+  } @else {
     //inner以上
     font-size: $base-font-size;
 
@@ -32,7 +32,7 @@ html {
 
     // 375px〜767px
     @include mq("md") {
-    font-size: $base-font-size;
+      font-size: $base-font-size;
     }
 
     // 375px以下
@@ -58,7 +58,7 @@ a:hover {
     @include mq("md") {
       opacity: 0.8;
     }
-  }@else {
+  } @else {
     opacity: 0.8;
     @include mq("md") {
       opacity: 1;
@@ -85,34 +85,32 @@ $color-orange: #ff9648;
 ===================================*/
 
 .pc-only {
+  display: none;
+  @include mq(md) {
     display: block;
-
-    @media screen and (max-width: 768px) {
-        display: none;
-    }
+  }
 }
 
 .sp-only {
-    display: none;
+  display: block;
 
-    @media screen and (max-width: 768px) {
-        display: block;
-    }
+  @include mq(md) {
+    display: none;
+  }
 }
 
 /*===================================
  * 余白
 ===================================*/
 .inner {
-    max-width: rem(1080);
+  max-width: rem(1080);
+  padding: 0 rem(25);
+  width: 100%;
+  margin: 0 auto;
+  @include mq(md) {
     padding: 0 rem(25);
-    width: 100%;
-    margin: 0 auto;
-    @include mq(md) {
-        padding: 0 rem(25);
-    }
+  }
 }
-
 
 /*===================================
  * 共通パーツ
@@ -122,31 +120,37 @@ $color-orange: #ff9648;
   position: relative;
   line-height: 1;
   font-family: $font-family-hiragino;
-  @include mq(md){
-    font-size:  rem(33);
+  font-size:  rem(28);
+  @include mq(md) {
+    font-size: rem(33);
   }
 
-  &::before{
+  &::before {
     content: attr(data-title);
     position: absolute;
     z-index: -1;
-    bottom: -25%;
+    bottom: 30%;
     left: -5%;
     color: $color-blue;
-    font-size: rem(150);
-    width: 100vw;
+    font-size: clamp(rem(45), 10vw, rem(90));
+    // width: 100vw;
     @include mq(md){
-        font-size: rem(120);
+      bottom: -25%;
+    }
+  }
+  &.value-title {
+    &::before {
+      color: $color-white;
+      bottom: 60%;
     }
   }
 }
 
-.small-text{
+.small-text {
   line-height: 2;
 }
 
-
-.listMark-grid{
+.listMark-grid {
   font-size: rem(18);
 }
 
