--- a/src/sass/layout/_l-career.scss
+++ b/src/sass/layout/_l-career.scss
@@ -4,7 +4,7 @@
 
   margin-bottom: rem(100);
   @include mq(md){
-    padding:  rem(70);
+    // padding:  rem(70);
     margin-bottom: rem(120);
   }
 }
