--- a/src/sass/layout/_l-guidelines.scss
+++ b/src/sass/layout/_l-guidelines.scss
@@ -3,7 +3,7 @@
 .l-guidelines {
   margin-bottom: rem(100);
   @include mq(md){
-    padding:  rem(70);
+    // padding:  rem(70);
     margin-bottom: rem(120);
   }
 }
