--- a/src/sass/layout/_l-profile.scss
+++ b/src/sass/layout/_l-profile.scss
@@ -3,6 +3,7 @@
 .l-profile {
   margin-bottom: rem(80);
   @include mq(md){
-    margin-bottom: rem(100);
+    // margin-bottom: rem(100);
+    padding:  rem(70);
   }
 }
