--- a/src/sass/project/_p-anckerLink.scss
+++ b/src/sass/project/_p-anckerLink.scss
@@ -21,10 +21,10 @@
 
 
 .p-anckerLink__title-wrap {
-  width:  rem(100);
-  margin: 0 auto;
   margin-bottom: rem(15);
   @include mq(md){
+    width:  rem(100);
+    margin: 0 auto;
     margin-bottom: rem(20);
   }
 }
@@ -34,8 +34,10 @@
   font-size:  rem(18);
   color: $color-text-blue;
   position: relative;
-  text-align: center;
+  padding-left: 20px;
   @include mq(md){
+    padding-left: rem(0);
+    text-align: center;
     font-size:  rem(20);
   }
 
@@ -48,8 +50,12 @@
     background-position: center;
     width:  rem(11);
     height:  rem(10);
-    top: 40%;
-    left: 10%;
+    top: 35%;
+    left: 0;
+    @include mq(md){
+      top: 40%;
+      left: 10%;
+    }
   }
 }
 
@@ -59,13 +65,18 @@
 
 .p-anckerLink__items {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
-  justify-content: center;
+  @include mq(md){
+    justify-content: center;
+  }
 }
 
 .p-anckerLink__item {
   position: relative;
+  // width: rem(200);
   @include mq(md){
+    // width: 100%;
     margin-right: rem(60);
     margin-bottom: rem(30);
     &:nth-of-type(5n){
