--- a/src/sass/project/_p-data.scss
+++ b/src/sass/project/_p-data.scss
@@ -37,17 +37,20 @@
 }
 
 .p-data__item {
-  &:nth-of-type(2) {
-    margin-top: rem(-70);
+  &:not(:last-child) {
+    margin-bottom: rem(50);
   }
-  &:nth-of-type(n + 3) {
-    margin-top: rem(55);
-  }
-  &:nth-child(2n) {
-    margin-left: rem(130);
-  }
-
   @include mq(md) {
+    margin-bottom: rem(0);
+    &:nth-of-type(2) {
+      margin-top: rem(-70);
+    }
+    &:nth-of-type(n + 3) {
+      margin-top: rem(55);
+    }
+    &:nth-child(2n) {
+      margin-left: rem(130);
+    }
     width: per(305, 1030);
 
   }
