--- a/src/sass/project/_p-guidelines.scss
+++ b/src/sass/project/_p-guidelines.scss
@@ -1,64 +1,55 @@
-@use '../foundation/' as *;
+@use "../foundation/" as *;
 
 .p-guidelines {
-
+  position: relative;
 }
 
-
+.p-guidelines__bg {
+  position: absolute;
+  z-index: -1;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    transparent 0%,
+    transparent 45%,
+    $color-blue 25%
+  );
+}
 
 .p-guidelines__inner {
-
 }
 
 .inner {
-
 }
 
 .p-guidelines__title-wrap {
   margin-bottom: rem(40);
-  @include mq(md){
+  @include mq(md) {
     margin-bottom: rem(40);
   }
 }
 
 .p-guidelines__title {
-
 }
 
 .main-title {
-
 }
 
 .p-guidelines__sub-title {
-
 }
 
 .sub-title {
-
 }
 
 .p-guidelines__wrap {
   position: relative;
   margin: 0 auto;
-  &::before {
-    content: "";
-    background: linear-gradient(
-      90deg,
-      transparent 0%,
-      transparent 45%,
-      $color-blue 25%
-    );
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 100%;
-    z-index: -1;
-  }
+  width: 100%;
 
-  @include mq(md){
+  @include mq(md) {
     padding-bottom: rem(50);
     width: per(650, 1030);
   }
@@ -70,25 +61,28 @@
   margin-bottom: 15px;
   border-bottom: 1px solid #999390;
   box-sizing: border-box;
-  @include mq(md){
+  padding-bottom: rem(30);
+  padding-top: rem(30);
+  @include mq(md) {
     padding-bottom: rem(30);
     padding-top: rem(30);
   }
-  &::before{
+  &::before {
     content: "";
     display: block;
     position: absolute;
     bottom: -2px;
     left: 0;
     width: 140px;
-    height:  2px;
+    height: 2px;
     background: $color-text-blue;
   }
 }
 
 .p-guidelines__term {
   // float: left;
-  @include mq(md){
+  width: 30%;
+  @include mq(md) {
     width: rem(180);
   }
 }
@@ -99,8 +93,9 @@
   // transform: translateY(-50%);
   // left: 0;
   // padding-left: rem(150);
-  @include mq(md){
+  margin-left: rem(20);
+  @include mq(md) {
     // padding-left: rem(200);
-    margin-left:  rem(20);
+    margin-left: rem(20);
   }
 }
