--- a/src/sass/project/_p-work.scss
+++ b/src/sass/project/_p-work.scss
@@ -1,38 +1,53 @@
-@use '../foundation' as *;
+@use "../foundation" as *;
 
 .p-work {
-
+  position: relative;
 }
 
+.p-work__bg {
+
+  @include mq(md) {
+    position: absolute;
+    z-index: -1;
+    // top: 300px;
+    left: 0;
+    width: 100%;
+    height: fit-content;
+    background: linear-gradient(
+      90deg,
+      transparent 0%,
+      transparent 70%,
+      $color-blue 25%
+    );
+    top: 150px;
+  }
+}
 
 
 .p-work__inner {
-
+  // overflow: hidden;
 }
 
 .inner {
-
 }
 
 .p-work__title-wrap {
   margin-bottom: rem(40);
-  @include mq(md){
+  @include mq(md) {
     margin-bottom: rem(50);
   }
 }
 
 .p-work__title {
-
 }
 
 .main-title {
-
 }
 
 .p-work__first-info {
   text-align: center;
   margin-bottom: rem(30);
-  @include mq(md){
+  @include mq(md) {
     margin-bottom: rem(40);
   }
 }
@@ -40,42 +55,57 @@
 .p-work__wrap {
   position: relative;
   width: 100%;
-  padding:  rem(50) 0;
-  &::before {
-    content: "";
-    background: linear-gradient(
-      90deg,
-      transparent 0%,
-      transparent 70%,
-      $color-blue 25%
-    );
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 100%;
-    z-index: -1;
-  }
+  padding: rem(50) 0;
+  // background: linear-gradient(
+  //   90deg,
+  //   transparent 0%,
+  //   transparent 70%,
+  //   $color-blue 25%
+  // );
+  // margin-left: calc(50% - 50vw);
+  // margin-right: calc(50% - 50vw);
+  // width: 100vw;
+  // padding-left: calc(50vw - 50%);
+  // padding-right: calc(50vw - 50%);
+  // &::before {
+  //   content: "";
+  //   background: linear-gradient(
+  //     90deg,
+  //     transparent 0%,
+  //     transparent 70%,
+  //     $color-blue 25%
+  //   );
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   // width: calc(100% + 50vw);
+  //   width: 100vw;
+  //   left: -25vw;
+  //   transform: translateX(0);
+  //   height: 100%;
+  //   z-index: -1;
+  //   margin-left: calc(50% - 50vw);
+  //   // margin-right: calc(50% - 50vw);
+  // }
 }
 
 .p-work__item {
-  @include mq(md){
+  display: flex;
+  @include mq(md) {
     display: flex;
     justify-content: space-between;
   }
-  &:nth-of-type(even){
+  &:nth-of-type(even) {
     flex-direction: row-reverse;
-    .p-work__text{
-    margin-right: rem(70);
-    margin-left: rem(0);
+    .p-work__text {
+      margin-right: rem(70);
+      margin-left: rem(0);
     }
   }
 
-  &:not(:last-child){
+  &:not(:last-child) {
     margin-bottom: rem(40);
-    @include mq(md){
+    @include mq(md) {
       margin-bottom: rem(50);
     }
   }
@@ -83,8 +113,10 @@
 
 .p-work__img {
   width: 100%;
-  @include mq(md){
-      max-width: rem(600);
+  // order: 2;
+  @include mq(md) {
+    // order: 1;
+    max-width: rem(600);
   }
   img {
     width: 100%;
@@ -94,34 +126,43 @@
 }
 
 .p-work__text {
-  @include mq(md){
+  @include mq(md) {
     margin-left: rem(70);
     margin-right: rem(0);
+  }
+
+  p {
+    // order: 3;
+    @include mq(md) {
+      // order: 2;
+    }
   }
 }
 
 .p-work__item-title {
-  font-size:  rem(24);
-  padding-left:  rem(70);
+  font-size: rem(24);
+  padding-left: rem(70);
   position: relative;
   margin-bottom: rem(20);
-  @include mq(md){
-    font-size:  rem(30);
+  // order: 1;
+  @include mq(md) {
+    // order: 0;
+    font-size: rem(30);
     margin-bottom: rem(30);
   }
-  &::before{
-  content: "";
-  position: absolute;
-  display: block;
-  // background-image: url("../../../assets/img/icon/number_2.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  width:  rem(90);
-  height:  rem(80);
-  left: -3%;
-  top: 25%;
-  transform: translateY(-50%);
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    // background-image: url("../../../assets/img/icon/number_2.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: rem(90);
+    height: rem(80);
+    left: -3%;
+    top: 25%;
+    transform: translateY(-50%);
   }
 }
 
@@ -149,8 +190,5 @@
   background-image: url("../../../assets/img/icon/number_6.png");
 }
 
-
-
 .listMark-grid {
-
 }
