--- a/_include/footer.html
+++ b/_include/footer.html
@@ -4,5 +4,6 @@
 <!-- JS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="/assets/js/script.js"></script>
+<script src="/assets/js/main.js"></script>
 </body>
 </html>
