--- a/src/sass/layout/_l-hero.scss
+++ b/src/sass/layout/_l-hero.scss
@@ -1,7 +1,14 @@
 @use "../foundation" as *;
 
 .l-hero {
-  margin-bottom: rem(100);
+  padding-top: rem(30);
+  margin-bottom: rem(200);
+  background: linear-gradient(
+    0deg,
+    transparent 20%,
+    $color-blue 100%,
+    transparent 100%,
+  );
   @include mq(md) {
     margin-bottom: rem(210);
   }
