--- a/src/sass/project/_p-anckerLink.scss
+++ b/src/sass/project/_p-anckerLink.scss
@@ -11,7 +11,7 @@
   background-color: $color-white;
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.45);
   border-radius:  rem(18);
-
+  padding:  rem(20);
   @include mq(md){
     padding:  rem(30)  rem(20);
   }
@@ -21,7 +21,7 @@
 
 
 .p-anckerLink__title-wrap {
-  margin-bottom: rem(15);
+  margin-bottom: rem(10);
   @include mq(md){
     width:  rem(100);
     margin: 0 auto;
@@ -64,17 +64,33 @@
 }
 
 .p-anckerLink__items {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
   @include mq(md){
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     justify-content: center;
+  }
+}
+
+.p-anckerLink__items-sp{
+  display: flex;
+  @include mq(md){
+    display: none;
+  }
+
+  .p-anckerLink__item{
+    &:not(:last-child){
+      margin-right: rem(50);
+    }
   }
 }
 
 .p-anckerLink__item {
   position: relative;
-  // width: rem(200);
+  display: inline-block;
+  a {
+    font-size: clamp( rem(10), 2.5vw,  rem(16));
+  }
   @include mq(md){
     // width: 100%;
     margin-right: rem(60);
