--- a/src/sass/project/_p-header.scss
+++ b/src/sass/project/_p-header.scss
@@ -68,7 +68,7 @@
     display: flex;
     align-items: center;
     font-size: rem(15);
-    font-weight: 500;
+    font-weight: bold;
     line-height: 1;
     color: #333;
     text-transform: uppercase;
