スタイル再調整

--- a/_include/header.html
+++ b/_include/header.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header class="p-header l-header">
+    <header class="p-header l-header" id="header-link">
       <div class="p-header__inner">
         <h1 class="p-header__logo">
           <a href="#">
@@ -31,25 +31,27 @@
         <nav class="p-header__nav">
           <ul class="p-header__nav-list">
             <li class="p-header__nav-item">
-              <a href="#">私の会社で働く6つの理由</a>
+              <a href="#work">私の会社で働く6つの理由</a>
             </li>
             <li class="p-header__nav-item">
-              <a href="#">代表挨拶</a>
+              <a href="#message">代表挨拶</a>
             </li>
             <li class="p-header__nav-item">
-              <a href="#">私たちのお仕事</a>
+              <a href="#about">私たちのお仕事</a>
             </li>
             <li class="p-header__nav-item">
-              <a href="#">募集要項</a>
+              <a href="#guidelines">募集要項</a>
             </li>
             <li class="p-header__nav-item">
-              <a href="#">会社概要</a>
+              <a href="#company">会社概要</a>
             </li>
             <li class="p-header__nav-item p-header__nav-item--contact">
-              <a href="#" target="_blank" rel="noopener">エントリーはこちら</a>
+              <a href="#contactBtn" target="_blank" rel="noopener">エントリーはこちら</a>
             </li>
           </ul>
         </nav>
+
+        <div class="mask" id="mask"></div>
         <button class="p-header__hamburger js-hamburger">
           <span></span>
           <span></span>
@@ -59,22 +61,22 @@
           <nav class="p-header__drawer-nav">
             <ul class="p-header__drawer-list">
               <li class="p-header__drawer-item">
-                <a href="#">私の会社で働く6つの理由</a>
+                <a href="#work">私の会社で働く6つの理由</a>
               </li>
               <li class="p-header__drawer-item">
-                <a href="#">代表挨拶</a>
+                <a href="#message">代表挨拶</a>
               </li>
               <li class="p-header__drawer-item">
-                <a href="#">私たちのお仕事</a>
+                <a href="#about">私たちのお仕事</a>
               </li>
               <li class="p-header__drawer-item">
-                <a href="#">募集要項</a>
+                <a href="#guidelines">募集要項</a>
               </li>
               <li class="p-header__drawer-item">
-                <a href="#">会社概要</a>
+                <a href="#company">会社概要</a>
               </li>
               <li class="p-header__drawer-item p-header__drawer-item--contact">
-                <a href="#" target="_blank" rel="noopener">エントリーはこちら</a>
+                <a href="#contactBtn" target="_blank" rel="noopener">エントリーはこちら</a>
               </li>
             </ul>
           </nav>
