--- a/src/sass/project/_p-header.scss
+++ b/src/sass/project/_p-header.scss
@@ -1,7 +1,7 @@
 @use '../foundation' as *;
 
 .p-header {
-    height: rem(40);
+    height: rem(60);
     background-color: #fff;
     @include mq(md) {
         height: rem(70);
@@ -10,10 +10,12 @@
 
 .p-header__inner {
     padding-left: rem(15);
+    padding-right:  rem(15);
     height: inherit;
     display: flex;
     justify-content: space-between;
     @include mq(md) {
+      height: inherit;
         padding: 0 rem(50);
     }
 }
@@ -34,6 +36,9 @@
 }
 
 .p-header__logo img {
+  aspect-ratio: 140/60;
+  object-fit: cover;
+  height: auto;
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -104,7 +109,7 @@
     z-index: 999;
     width: rem(40);
     height: inherit;
-    background-color: #DE8430;
+    background-color: transparent;
     cursor: pointer;
     transition: .3s;
     @include mq(md) {
@@ -121,14 +126,14 @@
     left: 50%;
     transform: translateX(-50%);
     display: block;
-    width: rem(15);
-    height: 1px;
-    background-color: #fff;
+    width: rem(30);
+    height: 2px;
+    background-color: $color-black;
     transition: .5s;
 }
 
 .p-header__hamburger span:nth-of-type(1) {
-    top: rem(-4);
+    top: rem(-10);
 }
 
 .p-header__hamburger span:nth-of-type(2) {
@@ -136,7 +141,7 @@
 }
 
 .p-header__hamburger span:nth-of-type(3) {
-    top: rem(4);
+    top: rem(10);
 }
 
 .p-header__hamburger.is-open span:nth-of-type(1) {
@@ -149,22 +154,23 @@
 }
 
 .p-header__hamburger.is-open span:nth-of-type(3) {
-    top: rem(-2);
+    top: rem(-5);
     transform: translateX(-50%) rotate(-45deg);
 }
 
 .p-header__drawer {
-    padding: rem(228) 0;
+    padding-top: rem(100);
     position: fixed;
     z-index: 900;
     top: 0;
     right: -120%;
     width: 100%;
     height: 100vh;
-    background-color: rgba($color: #623A14, $alpha: .95);
+    background-color: rgba($color-blue, $alpha: .9);
     overflow-y: scroll;
     scrollbar-width: none;
     transition: .6s;
+
 }
 
 .p-header__drawer.is-open {
@@ -178,13 +184,23 @@
 .p-header__drawer-item a {
     padding: rem(15) 0;
     display: block;
-    font-size: rem(36);
+    font-size: rem(24);
     font-weight: 700;
     line-height: 1;
     letter-spacing: 0.05em;
-    color: #fff;
+    color: $color-black;
     text-align: center;
     text-transform: uppercase;
+}
+
+.p-header__drawer-item--contact a{
+    padding: rem(10) 0;
+    color: #fff;
+    background-color: #DE8430;
+    border-radius: rem(50);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .p-header__drawer-item.p-header__drawer-item--contact a::after {
@@ -198,4 +214,9 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+}
+
+
+.p-header__drawer-list{
+  padding: 0  rem(20);
 }
