--- a/src/sass/project/_p-hero.scss
+++ b/src/sass/project/_p-hero.scss
@@ -32,7 +32,7 @@
 
 .p-hero__title-wrap {
   position: absolute;
-  bottom: -25%;
+  bottom: -90px;
   left: 25px;
   @include mq(md){
     left: 0;
